# codex-kaoyanocr

./: .gitignore  README.md  main.py  pyproject.toml
archive/legacy_math_question_ocr/: adapters.py  classifier.py  cli.py  pipeline.py  utils.py  visualizer.py
archive/legacy_math_question_ocr/parsers/: fill_blank.py
docs/: 工程设计.md
examples/: data_model_examples.py  sample_question.ocr.json
src/math_question_ocr/: __init__.py  data_models.py  image_preprocessor.py  line_clusterer.py  minimal_pipeline.py  ocr_stub.py  patterns.py  question_classifier.py  rule_classifier.py  schemas.py  segmenter.py
src/math_question_ocr/parsers/: __init__.py  fill_blank_parser.py  single_choice.py  single_choice_parser.py  solution.py  solution_question_parser.py
tests/: test_data_models.py  test_fill_blank_parser.py  test_minimal_pipeline.py  test_question_classifier.py  test_single_choice_parser.py  test_solution_question_parser.py
